--- a/churros.html
+++ b/churros.html
@@ -47,7 +47,7 @@
         <h4> Outras receitas para você: </h4>
     </div>
     <a href="donut.html">   <img src="donut.jpg">
-    <a href="cannoli.html">   <img src="cannoli.jpg">
+    <a href="index.html">   <img src="cannoli.jpg">
     </hr>
 </body>
 </html>
