--- a/donut.html
+++ b/donut.html
@@ -75,7 +75,7 @@
     <h4> Outras receitas para você: </h4>
 </div>
 <a href="churros.html">   <img src="churros.avif">
-<a href="cannoli.html">   <img src="cannoli.jpg">
+<a href="index.html">   <img src="cannoli.jpg">
 </body>
 </html>
 
